--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   firebase_core: ^2.18.0
   firebase_auth: ^4.11.0
   cloud_firestore: ^4.10.0
-  modal_progress_hud: ^0.1.3
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
